Archive2/b8/414ca0e1861c7e/output
main.cpp:1:1: error: static_assert failed "It's 2014!"
static_assert(
^
1 error generated.
